# personal-claude-marketplace

./: .claudelint.yaml  .gitignore  .pre-commit-config.yaml  .skillsaw.yaml  ATLAS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
skill-eval/: .deepeval_telemetry.txt  .gitignore  baselines.json  pyproject.toml
skill-eval/codebases/clean-flask-app/: MANIFEST.md  requirements.txt
skill-eval/codebases/dirty-flask-app/: MANIFEST.md
skill-eval/fixtures/: README.md
skill-eval/fixtures/bug-investigation/: 1-clear-reproduction-steps.md  2-vague-bug-report.md  3-multi-bug-batch.md  4-dirty-app-race-condition.md  5-dirty-app-subtle-ssrf.md  6-masked-symptoms.md  7-misdirected-symptom.md
skill-eval/fixtures/composition/: overspecified-auth-plan.md  overspecified-crud-plan.md  planted-issues-diff.md  terse-auth-plan.md  terse-crud-plan.md
skill-eval/fixtures/deep-research/: 1-library-comparison.md  2-bridged-mode-codebase.md  3-contradictory-sources.md  4-dirty-app-technology-choice.md  5-uncomfortable-conclusion.md  6-contradictory-source.md  7-phased-delivery-temptation.md  8-biased-source-credibility.md  9-over-qualification-evasion.md
skill-eval/fixtures/fix/: 1-security-findings-with-code.md  10-cross-cutting-convention-conflict.md  11-fix-breaks-callers.md  12-generator-pipeline-conventions.md  13-insufficient-prior-fixes.md  14-over-scoping-improvement-feedback.md  15-systemic-deferral-bait.md  16-cosmetically-correct-prior-fixes.md  2-conflicting-fixes.md  3-research-gap-finding.md  4-false-positive-findings.md  5-multi-file-fix-chain.md  6-dirty-app-multi-issue-findings.md  7-deferral-bait-findings.md  8-shared-root-cause-findings.md  9-convention-violating-fix.md
skill-eval/fixtures/incremental-planning/: 1-ambiguous-requirements.md  2-multi-file-feature.md  3-scope-pressure.md  4-existing-codebase-context.md  5-dirty-app-feature-request.md  6-v1v2-self-scoping.md  7-codebase-specific-questions.md
skill-eval/fixtures/plan-review/: 1-circular-dependency-plan.md  10-self-scoping-plan.md  11-unfamiliar-domain-implicit-deps.md  12-missing-operational-concerns.md  13-format-and-structure-violations.md  14-reasonable-scope-reduction.md  2-well-structured-plan.md  3-missing-security-considerations.md  4-scope-creep-plan.md  5-infeasible-task-ordering.md  6-dirty-app-implementation-plan.md  7-clean-app-well-structured-plan.md  8-severity-ambiguous-plan.md  9-subtle-gap-plan.md
skill-eval/fixtures/pr-review/: 1-auth-bypass-in-middleware.md  10-suspicious-but-correct.md  11-convention-drift-pr.md  12-partially-verifiable-context.md  13-subtle-logic-bugs.md  2-clean-feature-addition.md  24-preexisting-ssrf-expansion.md  25-hard-findings-in-large-diff.md  3-performance-regression.md  (+6 more)
skill-eval/skill_eval/: cli.py  contains_metric.py  hook.py  judge.py  rubrics.py  runner.py
skill-eval/test_cases/: bug-investigation.json  composition.json  deep-research.json  fix.json  incremental-planning.json  plan-review.json  pr-review.json  quality-gate.json  roadmap.json  speculative.json  summarize.json  swarm.json  test-runner.json  unfuck.json
skill-eval/tests/: test_composition.py  test_skill_eval.py
(+344 files in other folders)
