[project]
name = "personal-claude-marketplace"
version = "0.1.0"
requires-python = ">=3.13"

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8", "pytest-xdist>=3", "pyright>=1.1.408"]
llm = ["anthropic[vertex]>=0.59.0"]

[tool.pytest.ini_options]
testpaths = ["dev-guard/tests"]
addopts = "-v --tb=short -n4"
markers = [
    "llm: marks tests that make real LLM API calls (deselect with '-m \"not llm\"')",
    "eval: marks skill evaluation tests (deselect with '-m \"not eval\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["dev-guard/hooks"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
