[project]
name = "skill-eval"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=2.0,<3.0",
    "instructor>=1.0,<2.0",
    "anthropic[vertex]>=0.40.0",
    "langchain>=0.1,<0.3",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
