[project]
name = "skill-eval"
version = "0.2.1"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.0",
    "instructor>=1.0,<2.0",
    "anthropic[vertex]>=0.80.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
